  shmem.fh header of Open MPI 1.10.2.
- Fix PAPI configure check when additional libraries are needed to
  successfully link to PAPI. This was a regression introduced with
  version 2.0.
- Fix typos in remapping specification file which caused the
  point-to-point and collective bytes transferred metrics to always
  be zero.
- Build-system hardening.

------------------- Released version 2.0.1 ---------------------------

Bugfixes:

- Prevent the memory adapter from initializing the measurement system
  as this leads to program crashes if it happens too early, e.g., on
  Blue Gene systems. If memory instrumentation is the only means of
  instrumentation, the measurement system is initialized via the
  feature 'compiler constructor'. If this feature isn't available
  (search for 'compiler constructor: yes' in 'scorep-info
  config-summary'), you need to add e.g., user instrumentation to
  initialize the measurement system.

------------------- Released version 2.0 -----------------------------

Major features:

- Score-P supports a new data collecting mode based on sampling.
  Sampling can be used in conjunction with the usual instrumentation
  of parallel paradigms.  Therefore it combines the lower overhead of
  statistical sampling and the accuracy of instrumentation.  Both
  call-path profiling and event tracing are supported.  As this is
  rather a major change in the Score-P internals and also for the user
  experience we appreciate any feedback but need to declare the
  sampling support as experimental in this first release.
- Support for OPARI2 2.0 was integrated.  OPARI2 is now more flexible
  to enable support for other pragma/directive based paradigms.
- Support for MPI-3.1 functions (except 'MPI_Comm_idup').  Most new
  functions currently provide plain enter/exit wrappers.
- Support for tracking memory allocations was added to Score-P.  This
  includes C/C++, MPI, and SHMEM API calls.  The instrumentation is